MDEV-24609: innodb_io_capacity can exceed innodb_io_capacity_max

innodb_io_capacity_update(): When the requested innodb_io_capacity
exceeds innodb_io_capacity_max and is more than half the maximum,
do not double it for computing innodb_io_capacity_max.

This integer arithmetics overflow was introduced in
commit 0f32299437a036ddaad04fe14a6ff63d15e3a72b (MDEV-7035).

No test case is added, because sizeof(ulong) varies between platforms.